<resources>
    <string name="app_name">Super Lista</string>

    <!--STRINGS PARA EL NAVIGATION DRAWER -->
    <string name="item_lista">Listas</string>
    <string name="item_productos">Productos</string>
    <string name="item_categorias">Categorias</string>
    <string name="item_supers">Supermercados</string>
    <string name="item_acercade">Acerca de</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="presionar_para_salir">Pulse de nuevo para salir.</string>

    <!--STRINGS PARA EL MENU PRODUCTOS -->
    <string name="eliminar_producto">Eliminar Producto</string>
    <string name="modificar_producto">Modificar Producto</string>
    <string name="editar_producto">Modificar</string>

    <!--STRINGS PARA EL FRAGMENT PRODUCTO -->
    <string name="buscar">Buscar</string>
    <string name="microphone">Microphone</string>

    <!--STRINGS PARA EL FRAGMENT SUPERMERCADO -->
    <string name="text_sucursal">Sucursal</string>

    <!--STRINGS PARA EL FRAGMENT SUPERMERCADO -->
    <string name="item_productos_de_lista">Productos de</string>

    <!--STRINGS PARA EL FRAGMENT ACERCA DE -->
    <string name="version_apk">Versión: 1.0</string>
    <string name="informacion">Información:</string>
    <string name="text_informacion">
        Aplicación desarrollada para la asignatura Seminario II de la carrera Analista Universitario en Sistemas.
    </string>
    <string name="text_ubicacion">Rosario-Santa Fe-Argentina</string>
    <string name="text_desarrolladores">Desarrolladores:</string>
    <string name="text_integrantes">Borda, Federico\nGrillo, Mauro</string>
    <string name="boton_env_comentario">Enviar Comentario</string>

    <!--STRINGS PARA EL xml form_agregar_lista -->
    <string name="nueva_lista">Nueva Lista</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_lista">escribe aqui el nombre</string>
    <string name="agregar">AGREGAR</string>
    <string name="cancelar">Cancelar</string>

    <!--STRINGS PARA EL xml form_agregar_categoria -->
    <string name="nueva_categoria">Nueva Categoria</string>
    <string name="nombre_categoria">escribe el nombre de la Categoria</string>
    <string name="descr_categoria">Descripción:</string>
    <string name="text_descr_categoria">escribe una descripción básica</string>


    <!--STRINGS PARA EL xml form_nuevo_producto -->
    <string name="nueva_producto">Nuevo Producto</string>
    <string name="categoria">Categoria:</string>
    <string name="supermercado">Supermercado:</string>
    <string name="precio">Precio:</string>
    <string name="marca">Marca:</string>
    <string name="valor_precio">0</string>
    <string name="unidad">Unidad:</string>

    <!--STRINGS PARA EL xml alert_dialog_add_marca -->
    <string name="hint_edit_marca">Escribe la marca aquí.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
