<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_menu_lista"
            android:checked="false"
            android:title="@string/item_lista"
            android:icon="@drawable/ic_assignment_black_24dp">
        </item>

        <item
            android:id="@+id/item_menu_productos"
            android:checked="false"
            android:title="@string/item_productos"
            android:icon="@drawable/ic_local_grocery_store_black_24dp">
        </item>

        <item
            android:id="@+id/item_menu_categoria"
            android:checked="false"
            android:title="@string/item_categorias"
            android:icon="@drawable/ic_filter_list_black_24dp">
        </item>

        <item
            android:id="@+id/item_menu_supers"
            android:checked="false"
            android:title="@string/item_supers"
            android:icon="@drawable/ic_store_black_24dp">
        </item>

    </group>

        <item android:title="Opciones">
            <menu>
                <item
                    android:id="@+id/item_menu_acercade"
                    android:checked="false"
                    android:title="@string/item_acercade"
                    android:icon="@drawable/ic_help_outline_black_24dp">
                </item>
            </menu>
        </item>







</menu>