<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margen_entre_items"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageViewAddCategoria"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:paddingTop="@dimen/margen_entre_items"
            app:srcCompat="@drawable/addcategoria" />

        <TextView
            android:id="@+id/textViewNombreFormCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:gravity="bottom"
            android:text="@string/nombre"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNombreFormCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/nombre_categoria"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewDescrCat"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="bottom"
            android:text="@string/descr_categoria"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextDescrCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.20"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/text_descr_categoria"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/buttonAgregar"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/agregar"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</ScrollView>