<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margen_entre_items">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageIconoSinFondo"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            app:srcCompat="@drawable/icono_sin_fondo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_version_apk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="@string/version_apk"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:paddingLeft="@dimen/margen_derecho_header"
            android:paddingTop="@dimen/margen_entre_items"
            android:text="@string/informacion"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTextoInformacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margen_derecho_header"
                android:layout_marginStart="@dimen/margen_derecho_header"
                android:fontFamily="serif"
                android:text="@string/text_informacion"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/textViewUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margen_derecho_header"
                android:layout_marginStart="@dimen/margen_derecho_header"
                android:fontFamily="serif"
                android:text="@string/text_ubicacion"
                android:textSize="18sp"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/textViewDesarroladores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margen_derecho_header"
                android:paddingLeft="@dimen/margen_derecho_header"
                android:text="@string/text_desarrolladores"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textViewIntegrantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margen_derecho_header"
                android:layout_marginStart="@dimen/margen_derecho_header"
                android:fontFamily="serif"
                android:text="@string/text_integrantes"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:targetApi="jelly_bean" />

            <Button
                android:id="@+id/buttonEnviarComentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margen_entre_items"
                android:text="@string/boton_env_comentario"
                android:textAllCaps="false" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>