<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_entre_items"
        android:orientation="vertical"
        android:weightSum="1">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNombreProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/imageViewMicrofono"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription=""
                app:srcCompat="@drawable/ic_microphone"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="InefficientWeight">

            <TextView
                android:id="@+id/textViewPrecio"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/precio"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextValorPrecio"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="17dp" />

            <ImageView
                android:id="@+id/imageViewFotoProd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_local_grocery_store_black_24dp"
                android:onClick="onImageClickFotoProd"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCategoria"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/categoria"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMarca"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSuper"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/supermercado"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerSuper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonAgregarProd"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/agregar"
            android:textColor="@android:color/background_light" />



    </LinearLayout>

</ScrollView>